mds: skip trim mds cache if mdcache is not opened

Removing dentry might cause crash right after MDS became active.
MDS cache might not be opened because of very heavy loads,
so stray manager was also not started and stray dentry would be delayed.

Fixes: https://tracker.ceph.com/issues/41066

Signed-off-by: Zhi Zhang <zhangz.david@outlook.com>